@@ -1,3 +1,4 @@
+3/9/11 feature request: show number of points earned in "Balanced" game popup
 # 0.00.16 (49623) Mar 8, 2011
 3/8/11 add reverse reactions for all reactions in level 3
 3/8/11 add Developer menu items for visibility of close button and top bar in game popups
